Ported feature/config feature and placed feature registration from fabric 1.18.1 version.